@startuml diagrama lógico
!theme plain
hide circle
skinparam linetype ortho

title Esquema Relacional (MDR) - Módulo de Teleconsultoria (ReNTAI)

entity "User" as user {
  * id : UUID <<PK>>
  --
  * email : VARCHAR(255) <<UNIQUE>>
  * first_name : VARCHAR(150)
  * last_name : VARCHAR(150)
  * role : ENUM(SOLICITANTE, ESPECIALISTA)
  * specialty : ENUM(...)
  * is_staff : BOOLEAN
}

entity "Teleconsultation" as teleconsulta {
  * id : UUID <<PK>>
  --
  * patient_name : VARCHAR(100)
  * patient_birth_date : DATE
  * clinical_history : TEXT
  * diagnostic_hypothesis : VARCHAR(255)
  * specialty : ENUM(...)
  * status : ENUM(PENDENTE, EM_ANDAMENTO, CONCLUIDA, CANCELADA)
  * created_at : TIMESTAMP
  --
  * solicitante_id : UUID <<FK>>
  especialista_id : UUID <<FK>>
}

entity "Attachment" as anexo {
  * id : UUID <<PK>>
  --
  * file : VARCHAR(500)
  * patient_name_cache : VARCHAR(255)
  * ai_score : FLOAT
  * ai_provider : VARCHAR(100)
  * ai_threshold : FLOAT
  * ai_timestamp : TIMESTAMP
  --
  teleconsultation_id : UUID <<FK>>
}

entity "Feedback" as parecer {
  * id : UUID <<PK>>
  --
  * content : TEXT
  * created_at : TIMESTAMP
  --
  * teleconsultation_id : UUID <<FK>>
  * specialist_id : UUID <<FK>>
}

entity "StatusHistory" as historico {
  * id : UUID <<PK>>
  --
  * status : VARCHAR(50)
  * changed_at : TIMESTAMP
  --
  * teleconsultation_id : UUID <<FK>>
  * changed_by_id : UUID <<FK>>
}

entity "AccessLog" as access {
  * id : BIGINT <<PK>>
  --
  * action : VARCHAR(50)
  * ip_address : VARCHAR(45)
  * accessed_at : TIMESTAMP
  --
  * teleconsultation_id : UUID <<FK>>
  * user_id : UUID <<FK>>
}

entity "GlobalConfig" as config {
  * id : INT <<PK>>
  --
  * ai_threshold : FLOAT
  * ai_provider : VARCHAR(50)
  * updated_at : TIMESTAMP
}

' Relacionamentos
user ||--o{ teleconsulta : "inicia"
user ||--o{ parecer : "emite"
user ||--o{ access : "gera rastreabilidade"
teleconsulta ||--o{ anexo : "possui"
teleconsulta ||--o| parecer : "gera"
teleconsulta ||--|{ historico : "registra timeline"
teleconsulta ||--o{ access : "alvo de acesso"
anexo }o--|| teleconsulta : "pode ser vinculado"

@enduml
